--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,7 +57,8 @@ for:
     - cmd: nuget.exe pack Source/Mosa.ClassLib/Mosa.ClassLib.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
     - cmd: nuget.exe pack Source/Mosa.Tools.Package/Mosa.Tools.Package.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
     - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
- #  - ps: ./mosactl.ps1 unittest
+    - cmd: copy bin\MOSA-Installer-*.exe bin\MOSA-Installer.exe
+#   - ps: ./mosactl.ps1 unittest
 #   - ps: ./mosactl.ps1 test
 
     build_script:
@@ -73,7 +74,8 @@ for:
     test: off
 
     artifacts:
-    - path: 'bin/MOSA-Installer-*.exe'
+    - path: 'MOSA-Installer.exe'
+    - path: 'bin\MOSA-Installer-*.exe'
     - path: Mosa.*.nupkg
 
     deploy:
@@ -82,7 +84,7 @@ for:
         description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
-        artifact: 'bin/MOSA-Installer-*.exe'
+        artifact: 'bin\MOSA-Installer-*.exe'
         draft: false
         prerelease: true
         force_update: true
@@ -95,7 +97,7 @@ for:
         description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
-        artifact: 'bin/MOSA-Installer-*.exe'
+        artifact: 'bin\MOSA-Installer-*.exe'
         draft: false
         prerelease: false
         force_update: true
@@ -132,8 +134,8 @@ for:
       publish_nuget: true
 
     after_build:
-    - cmd: nuget.exe pack Source/Mosa.Korlib/Mosa.Korlib.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
     - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
+    - cmd: copy bin\MOSA-Installer-*.exe bin\MOSA-Installer.exe
 #   - ps: ./mosactl.ps1 unittest
 #   - ps: ./mosactl.ps1 test
 
@@ -157,7 +159,8 @@ for:
       assembly_informational_version: "{version}"
 
     artifacts:
-    - path: 'bin/MOSA-Installer-*.exe'
+    - path: 'MOSA-Installer.exe'
+    - path: 'bin\MOSA-Installer-*.exe'
     - path: Mosa.*.nupkg
 
 # Linux Build:
