--- a/appveyor.yml
+++ b/appveyor.yml
@@ -84,7 +84,7 @@ for:
         description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
-        artifact: 'bin\MOSA-Installer-*.exe'
+        artifact: 'bin\MOSA-Installer-{version}.exe'
         draft: false
         prerelease: true
         force_update: true
@@ -97,7 +97,7 @@ for:
         description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
-        artifact: 'bin\MOSA-Installer-*.exe'
+        artifact: 'bin\MOSA-Installer-{version}.exe'
         draft: false
         prerelease: false
         force_update: true
