--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,7 +40,7 @@ for:
     - cmd: choco install InnoSetup
     - cmd: SET PATH=C:\Program Files (x86)\Inno Setup 6;%PATH%
 
-    before_build:
+    before_buil V\d:
     - nuget restore -Verbosity quiet Source/Mosa.sln
 
     build:
@@ -74,7 +74,7 @@ for:
     test: off
 
     artifacts:
-    - path: 'bin\MOSA-Installer.exe'
+    - path: 'MOSA-Installer.exe'
     - path: 'bin\MOSA-Installer-*.exe'
     - path: Mosa.*.nupkg
 
@@ -135,7 +135,7 @@ for:
 
     after_build:
     - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
-    - cmd: copy bin\MOSA-Installer-%APPVEYOR_BUILD_VERSION%.exe bin\MOSA-Installer.exe
+    - cmd: copy bin\MOSA-Installer-*.exe bin\MOSA-Installer.exe
 #   - ps: ./mosactl.ps1 unittest
 #   - ps: ./mosactl.ps1 test
 
@@ -159,7 +159,7 @@ for:
       assembly_informational_version: "{version}"
 
     artifacts:
-    - path: 'bin\MOSA-Installer.exe'
+    - path: 'MOSA-Installer.exe'
     - path: 'bin\MOSA-Installer-*.exe'
     - path: Mosa.*.nupkg
 
