--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,7 +57,7 @@ for:
     - cmd: nuget.exe pack Source/Mosa.ClassLib/Mosa.ClassLib.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
     - cmd: nuget.exe pack Source/Mosa.Tools.Package/Mosa.Tools.Package.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
     - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
-    - cmd: copy bin\MOSA-Installer-%APPVEYOR_BUILD_VERSION%.exe bin\MOSA-Installer.exe
+#   - cmd: copy bin\MOSA-Installer-%APPVEYOR_BUILD_VERSION%.exe bin\MOSA-Installer.exe
 #   - ps: ./mosactl.ps1 unittest
 #   - ps: ./mosactl.ps1 test
 
@@ -74,17 +74,20 @@ for:
     test: off
 
     artifacts:
-    - path: 'MOSA-Installer.exe'
+    - path: 'bin\MOSA-Installer.exe'
+	  name: 'MOSA-Installer.exe'
     - path: 'bin\MOSA-Installer-*.exe'
+	  name: 'MOSA-Installer-{version}.exe'
     - path: Mosa.*.nupkg
 
     deploy:
       - provider: GitHub
         release: MOSA Project - Development Build
+#		tag: {version}
         description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
-        artifact: 'bin\MOSA-Installer-{version}.exe'
+        artifact: 'MOSA-Installer-{version}.exe'
         draft: false
         prerelease: true
         force_update: true
@@ -97,7 +100,7 @@ for:
         description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
-        artifact: 'bin\MOSA-Installer-{version}.exe'
+        artifact: 'MOSA-Installer-{version}.exe'
         draft: false
         prerelease: false
         force_update: true
@@ -135,7 +138,7 @@ for:
 
     after_build:
     - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
-    - cmd: copy bin\MOSA-Installer-*.exe bin\MOSA-Installer.exe
+#   - cmd: copy bin\MOSA-Installer-*.exe bin\MOSA-Installer.exe
 #   - ps: ./mosactl.ps1 unittest
 #   - ps: ./mosactl.ps1 test
 
@@ -159,8 +162,6 @@ for:
       assembly_informational_version: "{version}"
 
     artifacts:
-    - path: 'MOSA-Installer.exe'
-    - path: 'bin\MOSA-Installer-*.exe'
     - path: Mosa.*.nupkg
 
 # Linux Build:
