--- a/Source/Mosa.Kernel.BareMetal/Mosa.Kernel.BareMetal.csproj
+++ b/Source/Mosa.Kernel.BareMetal/Mosa.Kernel.BareMetal.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="Alignment.cs" />
     <Compile Include="PageListNodeEntry.cs" />
+    <Compile Include="PageNodeDoubleListEntry.cs" />
     <Compile Include="PageTable.cs" />
     <Compile Include="AddressRange.cs" />
     <Compile Include="VirtualMemoryManager.cs" />
