--- a/Source/Mosa.Workspace.Kernel.Debug/Mosa.Workspace.Kernel.Debug.csproj
+++ b/Source/Mosa.Workspace.Kernel.Debug/Mosa.Workspace.Kernel.Debug.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Map\Intrinsic.cs" />
     <Compile Include="Mosa.Kernel.BareMetal.Extension\IntPtrExtension.cs" />
     <Compile Include="Mosa.Runtime.Extension\IntPtrExtension.cs" />
-    <Compile Include="PageListNodeEntry.cs" />
+    <Compile Include="PageNodeDoubleListEntry.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
