--- a/Source/Mosa.Workspace.Kernel.Debug/Mosa.Workspace.Kernel.Debug.csproj
+++ b/Source/Mosa.Workspace.Kernel.Debug/Mosa.Workspace.Kernel.Debug.csproj
@@ -50,13 +50,25 @@
     <Compile Include="Internal\CPU.cs" />
     <Compile Include="Internal\InvalidMemoryAccess.cs" />
     <Compile Include="Internal\Memory.cs" />
+    <Compile Include="Mosa.Kernel.BareMetal\AddressRange.cs" />
     <Compile Include="Mosa.Kernel.BareMetal\Alignment.cs" />
+    <Compile Include="Mosa.Kernel.BareMetal\Boot.cs" />
+    <Compile Include="Mosa.Kernel.BareMetal\BootMemory\BootMemoryMap.cs" />
+    <Compile Include="Mosa.Kernel.BareMetal\BootMemory\BootMemoryMapEntry.cs" />
+    <Compile Include="Mosa.Kernel.BareMetal\BootMemory\BootMemoryMapTable.cs" />
+    <Compile Include="Mosa.Kernel.BareMetal\BootMemory\BootMemoryMapType.cs" />
+    <Compile Include="Mosa.Kernel.BareMetal\Extension\IntPtrExtension.cs" />
+    <Compile Include="Mosa.Kernel.BareMetal\Multiboot.cs" />
+    <Compile Include="Mosa.Kernel.BareMetal\MultibootSpecification\MultibootV1.cs" />
+    <Compile Include="Mosa.Kernel.BareMetal\MultibootSpecification\MultibootV1MemoryMapEntry.cs" />
+    <Compile Include="Mosa.Kernel.BareMetal\MultibootSpecification\MultibootV1VBEEntry.cs" />
     <Compile Include="Mosa.Kernel.BareMetal\Page.cs" />
-    <Compile Include="Map\Platform.cs" />
-    <Compile Include="Map\Intrinsic.cs" />
-    <Compile Include="Mosa.Kernel.BareMetal.Extension\IntPtrExtension.cs" />
-    <Compile Include="Mosa.Runtime.Extension\IntPtrExtension.cs" />
-    <Compile Include="PageNodeDoubleListEntry.cs" />
+    <Compile Include="Map\Mod.Platform.cs" />
+    <Compile Include="Map\Mod.Intrinsic.cs" />
+    <Compile Include="Mosa.Runtime\Extension\IntPtrExtension.cs" />
+    <Compile Include="Mosa.Runtime\Plug\PlugAttribute.cs" />
+    <Compile Include="Mosa.Kernel.BareMetal\PageNodeDoubleListEntry.cs" />
+    <Compile Include="Mosa.Kernel.BareMetal\PageTable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
