--- a/appveyor.yml
+++ b/appveyor.yml
@@ -101,7 +101,7 @@ for:
         prerelease: false
         force_update: true
         on:
-          branch: Stable
+          branch: stable
 
       - provider: NuGet
         server:                  
@@ -111,7 +111,7 @@ for:
         symbol_server:           
         artifact: /.*\.nupkg/
         on:
-          branch: Stable
+          branch: stable
 
 # Windows Build - Visual Studio 2017:
   -
