--- a/appveyor.yml
+++ b/appveyor.yml
@@ -91,8 +91,8 @@ for:
           branch: master
 
       - provider: GitHub
-        tag: stable
-        release: MOSA Project - Stable Build
+        tag: v$(APPVEYOR_BUILD_VERSION)
+        release: MOSA Project v$(APPVEYOR_BUILD_VERSION)
         description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
