--- a/appveyor.yml
+++ b/appveyor.yml
@@ -83,7 +83,7 @@ for:
         description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
-        artifact: bin\*.exe
+        artifact: bin\MOSA-Installer-*.exe
         draft: false
         prerelease: true
         force_update: true
@@ -96,7 +96,7 @@ for:
         description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
-        artifact: bin\*.exe
+        artifact: bin\MOSA-Installer-*.exe
         draft: false
         prerelease: false
         force_update: true
