--- a/appveyor.yml
+++ b/appveyor.yml
@@ -74,6 +74,7 @@ for:
 
     artifacts:
     - path: bin\MOSA-Installer-*.exe
+	  name: installer
     - path: Mosa.*.nupkg
 
     deploy:
@@ -83,7 +84,7 @@ for:
         description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
-        artifact: bin\MOSA-Installer-*.exe
+        artifact: installer
         draft: false
         prerelease: true
         force_update: true
