--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -312,7 +312,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stages\BuildStackStage.cs" />
     <Compile Include="Stages\OptimizationStage.cs" />
-    <Compile Include="Stages\IRSubstitutionStage.cs" />
+    <Compile Include="Stages\RuntimeCallStage.cs" />
     <Compile Include="Stages\FloatingPointStage.cs" />
     <Compile Include="Stages\FinalTweakStage.cs" />
     <Compile Include="Stages\PostOptimizationStage.cs" />
