--- a/Source/Mosa.Kernel.BareMetal.x86/Mosa.Kernel.BareMetal.x86.csproj
+++ b/Source/Mosa.Kernel.BareMetal.x86/Mosa.Kernel.BareMetal.x86.csproj
@@ -71,6 +71,7 @@
     <Compile Include="PageTable.cs" />
     <Compile Include="PIC.cs" />
     <Compile Include="PlatformPlug.cs" />
+    <Compile Include="VGAColor.cs" />
     <Compile Include="VGAConsole.cs" />
     <Compile Include="VGAText.cs" />
     <Compile Include="SSE.cs" />
