--- a/Source/Mosa.Kernel.BareMetal/Mosa.Kernel.BareMetal.csproj
+++ b/Source/Mosa.Kernel.BareMetal/Mosa.Kernel.BareMetal.csproj
@@ -66,6 +66,7 @@
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ConsoleColor.cs" />
     <Compile Include="Console.cs" />
     <Compile Include="Alignment.cs" />
     <Compile Include="BootPageAllocator.cs" />
