WIP - minor bug fixes (#655)

--- a/Source/Mosa.Kernel.BareMetal.x86/Mosa.Kernel.BareMetal.x86.csproj
+++ b/Source/Mosa.Kernel.BareMetal.x86/Mosa.Kernel.BareMetal.x86.csproj
@@ -67,13 +67,13 @@
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Address.cs" />
-    <Compile Include="GDT\GDTTable.cs" />
+    <Compile Include="GDTTable.cs" />
     <Compile Include="PageTable.cs" />
     <Compile Include="PIC.cs" />
     <Compile Include="PlatformPlug.cs" />
-    <Compile Include="Console.cs" />
-    <Compile Include="Screen.cs" />
+    <Compile Include="VGAColor.cs" />
+    <Compile Include="VGAConsole.cs" />
+    <Compile Include="VGAText.cs" />
     <Compile Include="SSE.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -81,12 +81,8 @@
       <Project>{4cff6607-4d83-46e6-a1d0-ef045311c984}</Project>
       <Name>Mosa.Kernel.BareMetal</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Mosa.Kernel.x86\Mosa.Kernel.x86.csproj">
-      <Project>{FF099D48-3FA5-4ED6-BBA0-1497D734962A}</Project>
-      <Name>Mosa.Kernel.x86</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Mosa.Runtime.x86\Mosa.Runtime.x86.csproj">
-      <Project>{a47b7998-4ee8-4af8-9373-c664fdeddc61}</Project>
+      <Project>{a47b7998-4ee8-4af8-9373-c664fdeddc65}</Project>
       <Name>Mosa.Runtime.x86</Name>
     </ProjectReference>
     <ProjectReference Include="..\Mosa.Runtime\Mosa.Runtime.csproj">
