--- a/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
+++ b/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
@@ -93,6 +93,9 @@
     <Compile Include="Instructions\AdcS32.cs" />
     <Compile Include="Instructions\AdcSImm32.cs" />
     <Compile Include="Instructions\Add32.cs" />
+    <Compile Include="Instructions\AddImm32.cs" />
+    <Compile Include="Instructions\AddS32.cs" />
+    <Compile Include="Instructions\AddSImm32.cs" />
     <Compile Include="Instructions\Adr32.cs" />
     <Compile Include="Instructions\And32.cs" />
     <Compile Include="Instructions\Asr32.cs" />
