--- a/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
+++ b/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
@@ -87,6 +87,7 @@
     <Compile Include="ARMv8A32Instruction.cs" />
     <Compile Include="ARMv8A32Instructions.cs" />
     <Compile Include="BaseTransformationStage.cs" />
+    <Compile Include="ARMHelper.cs" />
     <Compile Include="GeneralPurposeRegister.cs" />
     <Compile Include="Instructions\Adc.cs" />
     <Compile Include="Instructions\AdcImm.cs" />
@@ -137,6 +138,8 @@
     <Compile Include="Instructions\MovImm.cs" />
     <Compile Include="Instructions\MovImmShift.cs" />
     <Compile Include="Instructions\MovRegShift.cs" />
+    <Compile Include="Instructions\MovtImm.cs" />
+    <Compile Include="Instructions\MovwImm.cs" />
     <Compile Include="Instructions\Mrs.cs" />
     <Compile Include="Instructions\Msr.cs" />
     <Compile Include="Instructions\Mul.cs" />
@@ -198,6 +201,7 @@
     <Compile Include="Intrinsic\Nop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stages\IRTransformationStage.cs" />
+    <Compile Include="Stages\ImmediateConstantStage.cs" />
     <Compile Include="Stages\LongOperandStage.cs" />
   </ItemGroup>
   <ItemGroup />
