--- a/Source/Mosa.BareMetal.HelloWorld.ARMv8A32/Mosa.BareMetal.HelloWorldARMv8A32.csproj
+++ b/Source/Mosa.BareMetal.HelloWorld.ARMv8A32/Mosa.BareMetal.HelloWorldARMv8A32.csproj
@@ -107,6 +107,10 @@
       <Project>{4cff6607-4d83-46e6-a1d0-ef045311c984}</Project>
       <Name>Mosa.Kernel.BareMetal</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mosa.UnitTests\Mosa.UnitTests.csproj">
+      <Project>{067aab6b-447a-45ba-9e0d-dfea886b4f69}</Project>
+      <Name>Mosa.UnitTests</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
