--- a/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
+++ b/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
@@ -101,6 +101,8 @@
     <Compile Include="Instructions\AndImm.cs" />
     <Compile Include="Instructions\AndImmShift.cs" />
     <Compile Include="Instructions\AndRegShift.cs" />
+    <Compile Include="Instructions\Asr.cs" />
+    <Compile Include="Instructions\AsrImm.cs" />
     <Compile Include="Instructions\B.cs" />
     <Compile Include="Instructions\Bic.cs" />
     <Compile Include="Instructions\BicImm.cs" />
@@ -133,7 +135,9 @@
     <Compile Include="Instructions\Ldrsb.cs" />
     <Compile Include="Instructions\Ldrsh.cs" />
     <Compile Include="Instructions\Lsl.cs" />
+    <Compile Include="Instructions\LslImm.cs" />
     <Compile Include="Instructions\Lsr.cs" />
+    <Compile Include="Instructions\LsrImm.cs" />
     <Compile Include="Instructions\Mov.cs" />
     <Compile Include="Instructions\MovImm.cs" />
     <Compile Include="Instructions\MovImmShift.cs" />
@@ -158,6 +162,7 @@
     <Compile Include="Instructions\Rev16.cs" />
     <Compile Include="Instructions\Revsh.cs" />
     <Compile Include="Instructions\Ror.cs" />
+    <Compile Include="Instructions\RorImm.cs" />
     <Compile Include="Instructions\Rsb.cs" />
     <Compile Include="Instructions\RsbImm.cs" />
     <Compile Include="Instructions\RsbImmShift.cs" />
