--- a/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
+++ b/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
@@ -129,11 +129,15 @@
     <Compile Include="Instructions\Ldm.cs" />
     <Compile Include="Instructions\Ldmfd.cs" />
     <Compile Include="Instructions\Ldmia.cs" />
-    <Compile Include="Instructions\Ldr.cs" />
-    <Compile Include="Instructions\Ldrb.cs" />
+    <Compile Include="Instructions\Ldr32.cs" />
+    <Compile Include="Instructions\Ldr8.cs" />
+    <Compile Include="Instructions\LdrDown32.cs" />
+    <Compile Include="Instructions\LdrDown8.cs" />
     <Compile Include="Instructions\Ldrh.cs" />
     <Compile Include="Instructions\Ldrsb.cs" />
     <Compile Include="Instructions\Ldrsh.cs" />
+    <Compile Include="Instructions\LdrUp32.cs" />
+    <Compile Include="Instructions\LdrUp8.cs" />
     <Compile Include="Instructions\Lsl.cs" />
     <Compile Include="Instructions\LslImm.cs" />
     <Compile Include="Instructions\Lsr.cs" />
