--- a/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
+++ b/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
@@ -129,15 +129,36 @@
     <Compile Include="Instructions\Ldm.cs" />
     <Compile Include="Instructions\Ldmfd.cs" />
     <Compile Include="Instructions\Ldmia.cs" />
+    <Compile Include="Instructions\Ldr16.cs" />
     <Compile Include="Instructions\Ldr32.cs" />
     <Compile Include="Instructions\Ldr8.cs" />
+    <Compile Include="Instructions\LdrDown16.cs" />
     <Compile Include="Instructions\LdrDown32.cs" />
     <Compile Include="Instructions\LdrDown8.cs" />
-    <Compile Include="Instructions\Ldrh.cs" />
-    <Compile Include="Instructions\Ldrsb.cs" />
-    <Compile Include="Instructions\Ldrsh.cs" />
+    <Compile Include="Instructions\LdrDownImm16.cs" />
+    <Compile Include="Instructions\LdrDownImm32.cs" />
+    <Compile Include="Instructions\LdrDownImm8.cs" />
+    <Compile Include="Instructions\LdrDownImmS16.cs" />
+    <Compile Include="Instructions\LdrDownImmS8.cs" />
+    <Compile Include="Instructions\LdrDownS16.cs" />
+    <Compile Include="Instructions\LdrDownS8.cs" />
+    <Compile Include="Instructions\LdrImm16.cs" />
+    <Compile Include="Instructions\LdrImm32.cs" />
+    <Compile Include="Instructions\LdrImm8.cs" />
+    <Compile Include="Instructions\LdrImmS16.cs" />
+    <Compile Include="Instructions\LdrImmS8.cs" />
+    <Compile Include="Instructions\LdrS16.cs" />
+    <Compile Include="Instructions\LdrS8.cs" />
+    <Compile Include="Instructions\LdrUp16.cs" />
     <Compile Include="Instructions\LdrUp32.cs" />
     <Compile Include="Instructions\LdrUp8.cs" />
+    <Compile Include="Instructions\LdrUpImm16.cs" />
+    <Compile Include="Instructions\LdrUpImm32.cs" />
+    <Compile Include="Instructions\LdrUpImm8.cs" />
+    <Compile Include="Instructions\LdrUpImmS16.cs" />
+    <Compile Include="Instructions\LdrUpImmS8.cs" />
+    <Compile Include="Instructions\LdrUpS16.cs" />
+    <Compile Include="Instructions\LdrUpS8.cs" />
     <Compile Include="Instructions\Lsl.cs" />
     <Compile Include="Instructions\LslImm.cs" />
     <Compile Include="Instructions\Lsr.cs" />
