--- a/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
+++ b/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
@@ -204,9 +204,36 @@
     <Compile Include="Instructions\Stm.cs" />
     <Compile Include="Instructions\Stmea.cs" />
     <Compile Include="Instructions\Stmia.cs" />
-    <Compile Include="Instructions\Str.cs" />
-    <Compile Include="Instructions\Strb.cs" />
-    <Compile Include="Instructions\Strh.cs" />
+    <Compile Include="Instructions\Str16.cs" />
+    <Compile Include="Instructions\Str32.cs" />
+    <Compile Include="Instructions\Str8.cs" />
+    <Compile Include="Instructions\StrDown16.cs" />
+    <Compile Include="Instructions\StrDown32.cs" />
+    <Compile Include="Instructions\StrDown8.cs" />
+    <Compile Include="Instructions\StrDownImm16.cs" />
+    <Compile Include="Instructions\StrDownImm32.cs" />
+    <Compile Include="Instructions\StrDownImm8.cs" />
+    <Compile Include="Instructions\StrDownImmS16.cs" />
+    <Compile Include="Instructions\StrDownImmS8.cs" />
+    <Compile Include="Instructions\StrDownS16.cs" />
+    <Compile Include="Instructions\StrDownS8.cs" />
+    <Compile Include="Instructions\StrImm16.cs" />
+    <Compile Include="Instructions\StrImm32.cs" />
+    <Compile Include="Instructions\StrImm8.cs" />
+    <Compile Include="Instructions\StrImmS16.cs" />
+    <Compile Include="Instructions\StrImmS8.cs" />
+    <Compile Include="Instructions\StrS16.cs" />
+    <Compile Include="Instructions\StrS8.cs" />
+    <Compile Include="Instructions\StrUp16.cs" />
+    <Compile Include="Instructions\StrUp32.cs" />
+    <Compile Include="Instructions\StrUp8.cs" />
+    <Compile Include="Instructions\StrUpImm16.cs" />
+    <Compile Include="Instructions\StrUpImm32.cs" />
+    <Compile Include="Instructions\StrUpImm8.cs" />
+    <Compile Include="Instructions\StrUpImmS16.cs" />
+    <Compile Include="Instructions\StrUpImmS8.cs" />
+    <Compile Include="Instructions\StrUpS16.cs" />
+    <Compile Include="Instructions\StrUpS8.cs" />
     <Compile Include="Instructions\Sub.cs" />
     <Compile Include="Instructions\SubImm.cs" />
     <Compile Include="Instructions\SubImmShift.cs" />
