--- a/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
+++ b/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
@@ -97,6 +97,8 @@
     <Compile Include="Instructions\AddImm.cs" />
     <Compile Include="Instructions\AddImmShift.cs" />
     <Compile Include="Instructions\AddRegShift.cs" />
+    <Compile Include="Instructions\AdfR4.cs" />
+    <Compile Include="Instructions\AdfR8.cs" />
     <Compile Include="Instructions\And.cs" />
     <Compile Include="Instructions\AndImm.cs" />
     <Compile Include="Instructions\AndImmShift.cs" />
@@ -121,10 +123,20 @@
     <Compile Include="Instructions\CmpRegShift.cs" />
     <Compile Include="Instructions\Dmb.cs" />
     <Compile Include="Instructions\Dsb.cs" />
+    <Compile Include="Instructions\DvfR4.cs" />
+    <Compile Include="Instructions\DvfR8.cs" />
+    <Compile Include="Instructions\DvrR4.cs" />
+    <Compile Include="Instructions\DvrR8.cs" />
     <Compile Include="Instructions\Eor.cs" />
     <Compile Include="Instructions\EorImm.cs" />
     <Compile Include="Instructions\EorImmShift.cs" />
     <Compile Include="Instructions\EorRegShift.cs" />
+    <Compile Include="Instructions\FdvR4.cs" />
+    <Compile Include="Instructions\FdvR8.cs" />
+    <Compile Include="Instructions\FmlR4.cs" />
+    <Compile Include="Instructions\FmlR8.cs" />
+    <Compile Include="Instructions\FrdR4.cs" />
+    <Compile Include="Instructions\FrdR8.cs" />
     <Compile Include="Instructions\Isb.cs" />
     <Compile Include="Instructions\Ldm.cs" />
     <Compile Include="Instructions\Ldmfd.cs" />
@@ -163,6 +175,8 @@
     <Compile Include="Instructions\MovtImm.cs" />
     <Compile Include="Instructions\Mrs.cs" />
     <Compile Include="Instructions\Msr.cs" />
+    <Compile Include="Instructions\MufR4.cs" />
+    <Compile Include="Instructions\MufR8.cs" />
     <Compile Include="Instructions\Mul.cs" />
     <Compile Include="Instructions\Mull.cs" />
     <Compile Include="Instructions\Mvn.cs" />
@@ -174,13 +188,21 @@
     <Compile Include="Instructions\OrrImm.cs" />
     <Compile Include="Instructions\OrrImmShift.cs" />
     <Compile Include="Instructions\OrrRegShift.cs" />
+    <Compile Include="Instructions\PolR4.cs" />
+    <Compile Include="Instructions\PolR8.cs" />
     <Compile Include="Instructions\Pop.cs" />
+    <Compile Include="Instructions\PowR4.cs" />
+    <Compile Include="Instructions\PowR8.cs" />
     <Compile Include="Instructions\Push.cs" />
     <Compile Include="Instructions\Rev.cs" />
     <Compile Include="Instructions\Rev16.cs" />
     <Compile Include="Instructions\Revsh.cs" />
+    <Compile Include="Instructions\RmfR4.cs" />
+    <Compile Include="Instructions\RmfR8.cs" />
     <Compile Include="Instructions\Ror.cs" />
     <Compile Include="Instructions\RorImm.cs" />
+    <Compile Include="Instructions\RpwR4.cs" />
+    <Compile Include="Instructions\RpwR8.cs" />
     <Compile Include="Instructions\Rsb.cs" />
     <Compile Include="Instructions\RsbImm.cs" />
     <Compile Include="Instructions\RsbImmShift.cs" />
@@ -189,6 +211,8 @@
     <Compile Include="Instructions\RscImm.cs" />
     <Compile Include="Instructions\RscImmShift.cs" />
     <Compile Include="Instructions\RscRegShift.cs" />
+    <Compile Include="Instructions\RsfR4.cs" />
+    <Compile Include="Instructions\RsfR8.cs" />
     <Compile Include="Instructions\Sbc.cs" />
     <Compile Include="Instructions\SbcImm.cs" />
     <Compile Include="Instructions\SbcImmShift.cs" />
@@ -221,6 +245,8 @@
     <Compile Include="Instructions\SubImm.cs" />
     <Compile Include="Instructions\SubImmShift.cs" />
     <Compile Include="Instructions\SubRegShift.cs" />
+    <Compile Include="Instructions\SufR4.cs" />
+    <Compile Include="Instructions\SufR8.cs" />
     <Compile Include="Instructions\Svc.cs" />
     <Compile Include="Instructions\Swi.cs" />
     <Compile Include="Instructions\Sxtb.cs" />
