--- a/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
+++ b/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
@@ -201,6 +201,8 @@
     <Compile Include="Instructions\Rev.cs" />
     <Compile Include="Instructions\Rev16.cs" />
     <Compile Include="Instructions\Revsh.cs" />
+    <Compile Include="Instructions\Rfc.cs" />
+    <Compile Include="Instructions\Rfs.cs" />
     <Compile Include="Instructions\RmfR4.cs" />
     <Compile Include="Instructions\RmfR8.cs" />
     <Compile Include="Instructions\Ror.cs" />
@@ -265,8 +267,10 @@
     <Compile Include="Instructions\TstRegShift.cs" />
     <Compile Include="Instructions\Uxtb.cs" />
     <Compile Include="Instructions\Uxth.cs" />
+    <Compile Include="Instructions\Wfc.cs" />
     <Compile Include="Instructions\Wfe.cs" />
     <Compile Include="Instructions\Wfi.cs" />
+    <Compile Include="Instructions\Wfs.cs" />
     <Compile Include="Instructions\Yield.cs" />
     <Compile Include="Intrinsic\Nop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
