--- a/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
+++ b/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
@@ -139,6 +139,10 @@
     <Compile Include="Instructions\Fml.cs" />
     <Compile Include="Instructions\Frd.cs" />
     <Compile Include="Instructions\Isb.cs" />
+    <Compile Include="Instructions\LdfDown.cs" />
+    <Compile Include="Instructions\LdfDownImm.cs" />
+    <Compile Include="Instructions\LdfUp.cs" />
+    <Compile Include="Instructions\LdfUpImm.cs" />
     <Compile Include="Instructions\Ldm.cs" />
     <Compile Include="Instructions\Ldmfd.cs" />
     <Compile Include="Instructions\Ldmia.cs" />
@@ -219,6 +223,10 @@
     <Compile Include="Instructions\SbcRegShift.cs" />
     <Compile Include="Instructions\Sev.cs" />
     <Compile Include="Instructions\Sqt.cs" />
+    <Compile Include="Instructions\StfDown.cs" />
+    <Compile Include="Instructions\StfDownImm.cs" />
+    <Compile Include="Instructions\StfUp.cs" />
+    <Compile Include="Instructions\StfUpImm.cs" />
     <Compile Include="Instructions\Stm.cs" />
     <Compile Include="Instructions\Stmea.cs" />
     <Compile Include="Instructions\Stmia.cs" />
